--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
 
     implementation 'androidx.compose.material:material-icons-extended'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.compose.material:material:1.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
